--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <link rel="stylesheet" href="responsive looking.css" />
     <link rel="stylesheet" href="list.css" />
     <link rel="stylesheet" href="responsive list.css" />
+    <link rel="stylesheet" href="shop.css" />
+    <link rel="stylesheet" href="responsive shop.css" />
+    <link rel="stylesheet" href="perfect.css" />
+    <link rel="stylesheet" href="responsive perfect.css" />
     <style>
       * {
         margin: 0;
@@ -375,16 +379,58 @@
 
       <!-- shop peat section -->
 
-      <section>
+      <section class="shop">
         <div class="shop-div1">
-          <h2>Shop by Peat</h2>
-          <p>
+          <h2 class="shop-title">Shop by Peat</h2>
+          <p class="shop-description">
             Designed so animals can relax & indulge in pet stylists, run around
             our exercise yards, make new friends in doggy daycare, or simply
             spend hours in our dog grooming salon.
           </p>
         </div>
-        <div class="shop-div2"></div>
+        <div class="shop-div2">
+          <div class="dog">
+            <img class="shop-logo" src="Logos/icons8-dog-100.png" alt="" />
+          </div>
+          <div class="cat">
+            <img class="shop-logo" src="Logos/icons8-cat-80.png" alt="" />
+          </div>
+          <div class="bird">
+            <img class="shop-logo" src="Logos/icons8-bird-80.png" alt="" />
+          </div>
+          <div class="rabit">
+            <img class="shop-logo" src="Logos/icons8-rabbit-80.png" alt="" />
+          </div>
+          <div class="fish">
+            <img class="shop-logo" src="Logos/icons8-fish-100.png" alt="" />
+          </div>
+          <div class="fish2">
+            <img class="shop-logo" src="Logos/icons8-fish-100.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <!-- perfect section -->
+
+      <section class="perfect">
+        <div class="perfect-container">
+          <div class="perfect-div1">
+            <img class="perfect-image" src="Image/woman with cat.jpg" alt="" />
+          </div>
+          <div class="perfect-div2">
+            <img class="comma" src="Logos/quote.png" alt="" />
+            <h2 class="perfect-title">Perfect Services!</h2>
+            <p class="perfect-description">
+              The breeder we worked with was very knowledgeable and patient with
+              our questions. <br />
+              Both of us were eager to ensure our puppy would be a good
+              match.The AKC Marketplace <br />
+              is hands down the best resource available to find quality breeders
+              best resource <br />
+              available to find quality breeders
+            </p>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
