--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
     <link rel="stylesheet" href="responsive shop.css" />
     <link rel="stylesheet" href="perfect.css" />
     <link rel="stylesheet" href="responsive perfect.css" />
+    <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="responsive footer.css" />
+    <link rel="stylesheet" href="health.css" />
+    <link rel="stylesheet" href="responsive health.css" />
+    <link rel="stylesheet" href="company.css" />
+    <link rel="stylesheet" href="responsive company.css" />
     <style>
       * {
         margin: 0;
@@ -76,6 +82,7 @@
           <button class="banner-button">Find Now</button>
         </div>
 
+        <!-- problem -->
         <div class="banner-image-container">
           <div class="pic1-container">
             <img id="pic1" src="Image/dog.jpg" alt="" />
@@ -432,7 +439,121 @@
           </div>
         </div>
       </section>
+
+      <!-- Health section -->
+
+      <section class="health">
+        <div class="health-anchors">
+          <a id="anchor-1" class="anchor" href="">For Dog</a
+          ><a class="anchor" href="">For Cat</a
+          ><a class="anchor" href="">For Others</a>
+        </div>
+        <div class="flex-container">
+          <div class="health-div1">
+            <h2 class="health-title">Health and Wellness Services</h2>
+            <div class="health-icons">
+              <i class="fa-solid fa-cookie-bite">Eat</i>
+              <i class="fa-solid fa-volleyball">Play</i>
+              <i class="fa-solid fa-bath">Bath</i>
+              <i class="fa-solid fa-moon">Sleep</i>
+            </div>
+            <p class="health-description">
+              Designed so animals can relax & indulge in pet stylists, run
+              <br />
+              around our exercise yards, make new friends in doggy <br />
+              daycare, or simply spend hours in our dog grooming salon.
+            </p>
+
+            <button class="health-btn" type="button">Book Appointment</button>
+          </div>
+          <div class="health-div2">
+            <img
+              class="health-image"
+              src="Image/pexels-mikhail-nilov-7474351.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- company icon section -->
+
+      <section class="company">
+        <div class="company-icon-container">
+          <img class="company-icon" src="company icons/buildings.png" alt="" />
+          <img
+            class="company-icon"
+            src="company icons/digital-transformation.png"
+            alt=""
+          />
+          <img class="company-icon" src="company icons/enterprise.png" alt="" />
+          <img class="company-icon" src="company icons/location.png" alt="" />
+          <img
+            class="company-icon"
+            src="company icons/office-building.png"
+            alt=""
+          />
+        </div>
+      </section>
     </main>
-    <footer></footer>
+
+    <!-- footer petshop -->
+    <footer>
+      <div class="footer-div1">
+        <div class="footer-icons">
+          <i class="fa-brands fa-square-facebook"></i>
+          <i class="fa-brands fa-square-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-whatsapp"></i>
+        </div>
+        <div>
+          <h1 class="petshop">PetShop</h1>
+        </div>
+        <div>
+          <p class="input-text">Let’s Update your self.</p>
+          <input class="input" type="email" placeholder="Email" />
+          <button class="btn" type="submit">Subscribe</button>
+        </div>
+      </div>
+      <div class="footer-div2">
+        <div class="div2-inner1">
+          <h5 class="inner-title1">Bully Market Place</h5>
+          <p>
+            Find Puppy <br />
+            Find Groomer <br />Find Trainer
+          </p>
+        </div>
+        <div class="div2-inner1">
+          <h5 class="inner-title1">List with Us</h5>
+          <p>
+            Breeders | Creating a Listing <br />Groomer | Creating a Listing
+            <br />
+            Trainer | Creating a Listing
+          </p>
+        </div>
+        <div class="div2-inner1">
+          <h5 class="inner-title1">Newsletters & Affiliates</h5>
+          <p>
+            Newsletter Subscriptions<br />
+            Center <br />
+            Bully Good Works
+          </p>
+        </div>
+        <div id="important" class="div2-inner1">
+          <h5 class="inner-title1">Polices & Support</h5>
+          <p>
+            Terms of Use <br />
+            Privacy Policy <br />
+            Contact
+          </p>
+        </div>
+      </div>
+      <div class="footer-div3">
+        <hr />
+        <p class="Right">
+          All Right Reserved Bully Mall © 2023 | | 1000S 8th Avenue, NY
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
