--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <link rel="stylesheet" href="responsive health.css" />
   <link rel="stylesheet" href="company.css" />
   <link rel="stylesheet" href="responsive company.css" />
+  <link rel="stylesheet" href="featured design.css">
   <style>
     * {
       margin: 0;
@@ -84,7 +85,6 @@
   
         <!-- problem -->
         <div class="banner-image-container">
-          <!-- <div class="banner-absolute-1"> -->
           <div class="pic1-container">
             <img id="pic1" src="Image/dog.jpg" alt="" />
           </div>
@@ -134,6 +134,7 @@
   
       <div class="pets-image-container">
         <div class="image1-container">
+          
           <img class="pet-image" src="Image/cat.jpg" alt="" />
           <p class="image-caption">
             German Breed <br />
@@ -178,8 +179,8 @@
   
           <div class="service-logo-container">
             <div class="logo-1">
-              <img src="Logos/service logo.png" alt="" />
-  
+              <!-- <img src="Logos/service logo.png" alt="" /> -->
+               <img id="log-1" src="designs/g-1.png" alt="">
               <div class="logo1-texts">
                 <h3 class="logo-title">Grooming</h3>
                 <p>Your pet is in good hands with us! our center.</p>
@@ -187,8 +188,9 @@
             </div>
   
             <div class="logo-2">
-              <img src="Logos/service logo.png" alt="" />
-  
+              <!-- <img src="Logos/service logo.png" alt="" /> -->
+
+              <img id="log-2" src="designs/g-2.png" alt="">
               <div class="logo2-texts">
                 <h3 class="logo-title">Dog Sitting</h3>
                 <p>Your pet is in good hands with us! our center.</p>
@@ -196,7 +198,9 @@
             </div>
   
             <div class="logo-3">
-              <img src="Logos/service logo.png" alt="" />
+              <!-- <img src="Logos/service logo.png" alt="" /> -->
+
+              <img id="log-3" src="designs/g-3.png" alt="">
               <div class="logo3-texts">
                 <h3 class="logo-title">Training</h3>
                 <p>Your pet is in good hands with us! our center.</p>
@@ -204,7 +208,8 @@
             </div>
   
             <div class="logo-4">
-              <img src="Logos/service logo.png" alt="" />
+              <!-- <img src="Logos/service logo.png" alt="" /> -->
+               <img id="log-4" src="designs/g-4.png" alt="">
               <div class="logo4-texts">
                 <h3 class="logo-title">Veterinary</h3>
                 <p>Your pet is in good hands with us! our center.</p>
