--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
   <link rel="stylesheet" href="company.css" />
   <link rel="stylesheet" href="responsive company.css" />
   <link rel="stylesheet" href="featured design.css">
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet"> -->
   <style>
     * {
       margin: 0;
@@ -53,25 +50,30 @@
       <!-- nav -->
       <nav class="nav-container">
         <div class="petshop-logo">
-          <!-- <h3>PetShop</h3> -->
           <img src="designs/pet-shop.png" alt="" />
         </div>
         <div class="nav-menu">
-          <a class="home links" href="">Home</a>
+          <div class="menu-div">
+            <a class="home links" href="">Home</a>
           <a class="links" href="">Pets</a>
           <a class="links" href="">Services</a>
           <a class="links" href="">Products</a>
-          <a class="links" id="block" href="">Become A Seller</a>
+          </div>
+          <div class="btn-div">
+            <a id="block" href="">Become A Seller</a>
+          </div>
         </div>
   
         <div class="nav-logins">
           <i class="fa-solid fa-cart-shopping"></i>
   
-          <i class="fa-regular fa-user">Log in / Register </i>
+          <i class="fa-regular fa-user"></i>
+          <p class="login-register">Log in / Register</p>
           <i class="fa-solid fa-bars"></i>
   
           <button class="nav-button">
-            <i class="fa-solid fa-play"></i> How it works
+            <i class="fa-solid fa-play"></i>
+            How  it works
           </button>
         </div>
       </nav>
@@ -80,8 +82,8 @@
       <div class="banner-container">
         <div class="banner-texts">
           <h1 class="banner-title">
-            Established & <br> Trusted
-            Pet <br> Care Service
+            Established & Trusted
+            Pet Care Service
           </h1>
           <p class="banner-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -95,39 +97,34 @@
         <!-- problem -->
         <div class="banner-image-container">
           <div class="pic1-container">
-            <img id="pic1" src="Image/dog.jpg" alt="" />
-          </div>
-          <div class="pic2-container">
-            <img id="pic2" src="Image/cat.jpg" alt="" />
-          </div>
-  
-          <div class="pic3-container">
-            <div class="logo1-container">
-              <img id="logo1" src="Logos/cat face.png" alt="" />
-              <div class="logo1-cat-texts">
-                <h6>Cat Food</h6>
-                <p>fish and meat</p>
+              <img class="bacground-1" src="Image/Rectangle 1.png" alt="">
+              <img class="cat-big" src="Image/cat big.png" alt="">
+              <img class="background-2" src="Image/Rectangle 2.png" alt="">
+              <img class="cat-small" src="Image/cute small.png" alt="">
+              <img class="ban-design-1" src="designs/banner desighn-1.png" alt="">
+              <img class="ban-design-2" src="designs/banner desighn-2.png" alt="">
+
+              <!-- container -3 -->
+              <div class="pic3-container">
+                <div class="logo1-container">
+                  <img id="logo1" src="Logos/cat face.png" alt="" />
+                  <div class="logo1-cat-texts">
+                    <h6>Cat Food</h6>
+                    <p>fish and meat</p>
+                  </div>
+                </div>
+                <hr />
+                <div class="logo1-container">
+                  <img id="logo2" src="Logos/dog face.png" alt="" />
+                  <div class="logo1-cat-texts">
+                    <h6>Dog Food</h6>
+                    <p>Milk and meat</p>
+                  </div>
+                </div>
               </div>
-            </div>
-            <hr />
-            <div class="logo1-container">
-              <img id="logo2" src="Logos/dog face.png" alt="" />
-              <div class="logo1-cat-texts">
-                <h6>Dog Food</h6>
-                <p>Milk and meat</p>
-              </div>
-            </div>
           </div>
-          <!-- </div> -->
-  
-          <!-- <div class="banner-absolute-2"> -->
-          <div class="design-1">
-            <img src="designs/banner desighn-2.png" alt="" />
-          </div>
-          <div class="design-2">
-            <img src="designs/banner desighn-1.png" alt="" />
-          </div>
-          <!-- </div> -->
+        
+          
         </div>
       </div>
     </header>
