--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                <img id="log-1" src="designs/g-1.png" alt="">
               <div class="logo1-texts">
                 <h3 class="logo-title">Grooming</h3>
-                <p class="text-color">Your pet is in good hands with us! our center.</p>
+                <p class="text-color">Your pet is in good hands with us! <br> our center.</p>
               </div>
             </div>
   
@@ -210,7 +210,7 @@
               <img id="log-2" src="designs/g-2.png" alt="">
               <div class="logo2-texts">
                 <h3 class="logo-title">Dog Sitting</h3>
-                <p class="text-color" >Your pet is in good hands with us! our center.</p>
+                <p class="text-color" >Your pet is in good hands with us! <br> our center.</p>
               </div>
             </div>
   
@@ -219,7 +219,7 @@
               <img id="log-3" src="designs/g-3.png" alt="">
               <div class="logo3-texts">
                 <h3 class="logo-title">Training</h3>
-                <p class="text-color">Your pet is in good hands with us! our center.</p>
+                <p class="text-color">Your pet is in good hands with us! <br> our center.</p>
               </div>
             </div>
   
@@ -228,7 +228,7 @@
                <img id="log-4" src="designs/g-4.png" alt="">
               <div class="logo4-texts">
                 <h3 class="logo-title">Veterinary</h3>
-                <p class="text-color">Your pet is in good hands with us! our center.</p>
+                <p class="text-color">Your pet is in good hands with us! <br> our center.</p>
               </div>
             </div>
           </div>
@@ -355,7 +355,7 @@
           <h2 class="looking-div1-title">What Are You Looking For?</h2>
           <p class="looking-div1-description">
             We offer long-term and short-term boarding. Every dog has its own
-            private, spacious room and daily individual time in our large play
+            private, spacious room and daily <br> individual time in our large play
             yard.
           </p>
         </div>
@@ -402,9 +402,9 @@
   
       <section class="list-section">
         <div class="listing-div1">
-          <h2>Listing With Us</h2>
+          <h2 class="list-title">Listing With Us</h2>
           <p class="list-text">
-            List your services or products and connect with new customers around
+            List your services or products and connect with new customers <br> around
             the world
           </p>
         </div>
@@ -415,7 +415,7 @@
               <p class="list-text">
                 Bully Mall Marketplace® is the only website that <br />
                 exclusively lists puppies from AKC-Registered <br />
-                litters, so you can choose a breeder with confidence.
+                litters, so you can choose a breeder with <br> confidence.
               </p>
               <p class="puppies">If you are a Breeder <span class="create">Create Listing</span></p>
             </div>
@@ -512,6 +512,7 @@
               best resource <br />
               available to find quality breeders
             </p>
+            <p class="perfect-description-2">----------- Ripn Khan</p>
           </div>
         </div>
       </section>
@@ -525,12 +526,26 @@
         </div>
         <div class="flex-container">
           <div class="health-div1">
-            <h2 class="health-title">Health and Wellness Services</h2>
+            <h2 class="health-title">Health and Wellness <br> Services</h2>
             <div class="health-icons">
-              <i class="fa-solid fa-cookie-bite">Eat</i>
-              <i class="fa-solid fa-volleyball">Play</i>
-              <i class="fa-solid fa-bath">Bath</i>
-              <i class="fa-solid fa-moon">Sleep</i>
+              
+              <div class="icon-div1">
+                <img src="Logos/health-icon-1.png" alt="">
+                <p id="eat">Eat</p>
+              </div>
+              
+              <div class="icon-div1">
+                <img src="Logos/health-icon-2.png" alt="">
+                <p class="eat-bath-sleep">Play</p>
+              </div>
+              <div class="icon-div1">
+                <img src="Logos/health-icon-3.png" alt="">
+                <p class="eat-bath-sleep">Bath</p>
+              </div>
+              <div class="icon-div1">
+                <img src="Logos/health-icon-4.png" alt="">
+                <p class="eat-bath-sleep">Sleep</p>
+              </div>
             </div>
             <p class="health-description">
               Designed so animals can relax & indulge in pet stylists, run
