--- a/index.html
+++ b/index.html
@@ -513,6 +513,7 @@
               available to find quality breeders
             </p>
             <p class="perfect-description-2">----------- Ripn Khan</p>
+            <img class="slider" src="Logos/Slyder.png" alt="">
           </div>
         </div>
       </section>
@@ -592,7 +593,7 @@
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-brands fa-whatsapp"></i>
       </div>
-      <div>
+      <div class="footer-pet-logo">
         <!-- <h1 class="petshop">PetShop</h1> -->
         <img class="white-dog" src="designs/white-dog.png" alt="">
       </div>
