--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="shortcut icon" type="x-icon" href="Logos/browser icon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pet</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
